// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`prompt/skill-resolver > output format snapshots > additionalContext markdown format snapshots > Also Available section format (suggest tier) 1`] = `
"## Also Available

- **performance-testing** — Write isolated unit tests with fast feedback
- **stress-testing** — Write isolated unit tests with fast feedback

Use \`/ork:<skill>\` to load full content."
`;

exports[`prompt/skill-resolver > output format snapshots > additionalContext markdown format snapshots > Related skills hint format (hint tier) 1`] = `"Related skills available: security-patterns, auth-patterns. Use /ork:<skill> if needed."`;

exports[`prompt/skill-resolver > output format snapshots > additionalContext markdown format snapshots > loaded skill markdown with full content 1`] = `
"## Relevant Patterns Loaded

### unit-testing

# unit-testing

Write isolated unit tests with fast feedback

## Quick Reference

\`\`\`typescript
// Example pattern from unit-testing
export function example() {
  return { pattern: 'unit-testing' };
}
\`\`\`

## Key Decisions

| Decision | Recommendation |
|----------|----------------|
| Framework | Vitest for tests |
| Coverage | 80% minimum |

## Related Skills

- unit-testing
- integration-testing

---"
`;

exports[`prompt/skill-resolver > output format snapshots > additionalContext markdown format snapshots > mixed tiers - loaded + suggested skills 1`] = `
"## Relevant Patterns Loaded

### fastapi-advanced

# fastapi-advanced

Advanced FastAPI patterns and middleware

## Quick Reference

\`\`\`typescript
// Example pattern from fastapi-advanced
export function example() {
  return { pattern: 'fastapi-advanced' };
}
\`\`\`

## Key Decisions

| Decision | Recommendation |
|----------|----------------|
| Framework | Vitest for tests |
| Coverage | 80% minimum |

## Related Skills

- unit-testing
- integration-testing

---


## Also Available

- **pydantic-models** — Advanced FastAPI patterns and middleware

Use \`/ork:<skill>\` to load full content."
`;

exports[`prompt/skill-resolver > output format snapshots > additionalContext markdown format snapshots > multiple loaded skills markdown 1`] = `
"## Relevant Patterns Loaded

### api-design-framework

# api-design-framework

Design REST APIs

## Quick Reference

\`\`\`typescript
// Example pattern from api-design-framework
export function example() {
  return { pattern: 'api-design-framework' };
}
\`\`\`

## Key Decisions

| Decision | Recommendation |
|----------|----------------|
| Framework | Vitest for tests |
| Coverage | 80% minimum |

## Related Skills

- unit-testing
- integration-testing

---

### openapi-spec

# openapi-spec

Create OpenAPI specifications

## Quick Reference

\`\`\`typescript
// Example pattern from openapi-spec
export function example() {
  return { pattern: 'openapi-spec' };
}
\`\`\`

## Key Decisions

| Decision | Recommendation |
|----------|----------------|
| Framework | Vitest for tests |
| Coverage | 80% minimum |

## Related Skills

- unit-testing
- integration-testing

---"
`;

exports[`prompt/skill-resolver > output format snapshots > complete HookResult snapshots by tier > below threshold (40%) - silent success 1`] = `
{
  "continue": true,
  "suppressOutput": true,
}
`;

exports[`prompt/skill-resolver > output format snapshots > complete HookResult snapshots by tier > hint tier (60%) - complete output structure 1`] = `
{
  "continue": true,
  "hookSpecificOutput": {
    "additionalContext": "Related skills available: error-handling. Use /ork:<skill> if needed.",
    "hookEventName": "UserPromptSubmit",
  },
  "suppressOutput": true,
}
`;

exports[`prompt/skill-resolver > output format snapshots > complete HookResult snapshots by tier > notify tier (85%) - complete output structure 1`] = `
{
  "continue": true,
  "hookSpecificOutput": {
    "additionalContext": "## Relevant Patterns Loaded

### database-schema-designer

# database-schema-designer

Design scalable database schemas

## Quick Reference

\`\`\`typescript
// Example pattern from database-schema-designer
export function example() {
  return { pattern: 'database-schema-designer' };
}
\`\`\`

## Key Decisions

| Decision | Recommendation |
|----------|----------------|
| Framework | Vitest for tests |
| Coverage | 80% minimum |

## Related Skills

- unit-testing
- integration-testing

---",
    "hookEventName": "UserPromptSubmit",
  },
  "suppressOutput": true,
  "systemMessage": "💡 Loaded: database-schema-designer",
}
`;

exports[`prompt/skill-resolver > output format snapshots > complete HookResult snapshots by tier > silent tier (95%) - complete output structure 1`] = `
{
  "continue": true,
  "hookSpecificOutput": {
    "additionalContext": "## Relevant Patterns Loaded

### api-design-framework

# api-design-framework

Design REST APIs with industry best practices

## Quick Reference

\`\`\`typescript
// Example pattern from api-design-framework
export function example() {
  return { pattern: 'api-design-framework' };
}
\`\`\`

## Key Decisions

| Decision | Recommendation |
|----------|----------------|
| Framework | Vitest for tests |
| Coverage | 80% minimum |

## Related Skills

- unit-testing
- integration-testing

---",
    "hookEventName": "UserPromptSubmit",
  },
  "suppressOutput": true,
}
`;

exports[`prompt/skill-resolver > output format snapshots > complete HookResult snapshots by tier > suggest tier (75%) - complete output structure 1`] = `
{
  "continue": true,
  "hookSpecificOutput": {
    "additionalContext": "## Also Available

- **testing-patterns** — Write effective unit and integration tests

Use \`/ork:<skill>\` to load full content.",
    "hookEventName": "UserPromptSubmit",
  },
  "suppressOutput": true,
}
`;
